# faythe-python-client

./: .gitignore  AUTHORS  ChangeLog  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: release.yml
examples/: .env.example  example.py
faytheclient/: __init__.py  client.py  exceptions.py  http.py  utils.py
